# scream2diretta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  README_CN.md  config.h.in  s2d_静音流与Target释放问题分析及改进方案.md
docs/: diretta-alsa-vs-direct-sdk.md
scripts/: install.sh  scream2diretta.default  scream2diretta.logrotate  scream2diretta.service
src/: alsa.c  diretta.cpp  diretta.h  diretta_diag.h  diretta_ring.h  diretta_sync.cpp  diretta_sync.h  jack.c  network.c  network.h  pcap.c  pcap_input.c  pcm_dump.cpp  pcm_dump.h  pcm_startup.cpp  pcm_startup.h  pulseaudio.c  raw.c  raw.h  receiver_tap.cpp  receiver_tap.h  scream.c  scream.h  shmem.c  sndio.c
